--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1>Yes today i got another pc</h1>
   <div class="container">
     <img src="images.jpg" alt="My Profile Picture" class="profile-img" />
     <h1 id="name">Saad Farooq</h1>
